Display saved meteorites in list

--- a/Meteorites/Stories/List/List.storyboard
+++ b/Meteorites/Stories/List/List.storyboard
@@ -17,33 +17,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIM-zT-tMI">
-                                <rect key="frame" x="155" y="402" width="80" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="IZd-Ya-4JY"/>
-                                    <constraint firstAttribute="height" constant="40" id="su4-PQ-TmJ"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                <connections>
-                                    <action selector="requestButtonTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="v6J-7f-7Xj"/>
-                                </connections>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rHf-gD-wbC">
+                                <rect key="frame" x="0.0" y="57" width="390" height="787"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="iIM-zT-tMI" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="fon-fO-RA3"/>
-                            <constraint firstItem="iIM-zT-tMI" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="gtu-zk-VXt"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="rHf-gD-wbC" secondAttribute="trailing" id="EBT-yl-0Lw"/>
+                            <constraint firstAttribute="bottom" secondItem="rHf-gD-wbC" secondAttribute="bottom" id="Fng-Mo-hqe"/>
+                            <constraint firstItem="rHf-gD-wbC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="Y7l-ZE-p7z"/>
+                            <constraint firstItem="rHf-gD-wbC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="xCX-ia-bl0"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="requestButton" destination="iIM-zT-tMI" id="E6d-M7-ZyM"/>
+                        <outlet property="tableView" destination="rHf-gD-wbC" id="d50-n8-OoC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="48" y="-2"/>
+            <point key="canvasLocation" x="47.692307692307693" y="-2.1327014218009479"/>
         </scene>
     </scenes>
     <resources>
